Thu May 27 18:28:35 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DLD-FUNCTIONS/chol.cc (Fchol): Also return info as second output.

	* DLD-FUNCTIONS/minmax.cc (max (const ComplexMatrix&, const
	ComplexMatrix&)): Correct test for real columns only.  
	(min (const ComplexMatrix&, const ComplexMatrix&)): Likewise.

Wed Apr 14 12:54:25 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DLD-FUNCTIONS/dassl.cc (Fdassl): Prevent recursive calls.
	* DLD-FUNCTIONS/fsolve.cc (Ffsolve): Likewise.
	* DLD-FUNCTIONS/lsode.cc (Flsode): Likewise.
	* DLD-FUNCTIONS/quad.cc (Fquad): Likewise.

	* file-io.cc (Fsscanf, Ffscanf): Doc fix.

Sat Mar 27 11:07:51 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov.h (octave_value::count): New function.
	* symtab.cc (symbol_record::dump_symbol_info): New function.
	* symtab.cc (symbol_record::symbol_def::dump_symbol_info): Ditto.
	* variables.cc (F__dump_symbol_info__): Ditto.

	* pt-misc.cc (tree_parameter_list::clear): New function.
	* ov-usr-fcn.h (octave_user_function::clear_args_passed): Ditto.
	* ov-usr-fcn.cc (clear_param_list): New function.
	(clear_args_passed): New function.
	(octave_user_function::do_index_op): Use them to decrement
	reference counts on local variables.

Fri Mar 26 00:51:53 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (libraries): Use the libfoo.a(objects) method of
	creating static libs.

	* defaults.cc (symbols_of_defaults): Initialize LOADPATH to
	Vload_path, not ":".

Thu Mar 18 12:09:23 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* data.cc (Fisnumeric): Fix typo.

Thu Mar  4 02:17:04 1999  James Macnicol <jamesm@evans.ee.adfa.oz.au>

	* file-io.cc (Ffread, Ffwrite): Add uint16 and uint32 data types
	to doc string.

Wed Mar  3 11:55:17 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lex.l (handle_string): Allow "" to pass through unchanged if
	working on a gset command.

Tue Mar  2 01:36:29 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>
